@@ -237,6 +237,7 @@ nntp              { return NNTP; }
 ntp3              { return NTP3; }
 ssh               { return SSH; }
 redis             { return REDIS; }
+mongodb           { return MONGODB; }
 dwp               { return DWP; }
 ldap2             { return LDAP2; }
 ldap3             { return LDAP3; }
